# recon-gen

./: .gitignore  CLAUDE.md  PLAN.md  PLAN_ARCHIVE.md  README.md  RELEASE_NOTES.md  SPEC.md  SPEC_gap_feedback.md  SPEC_studio.md  STATUS.md  biome.jsonc  config.example.yaml  conftest.py  coverage-report.md  pyproject.toml  run_tests.sh
.githooks/: pre-commit
.github/: E2E_SETUP.md
.github/workflows/: ci.yml  demo-publish.yml  e2e.yml  nightly-cost-sweep.yml  pages.yml  release.yml
deploy/cloudflared/: cloudflared.yml.example
deploy/launchd/: io.hotchkiss.recon-demo.refresh.plist  io.hotchkiss.recon-demo.runner.plist  io.hotchkiss.recon-demo.sasquatch.plist  io.hotchkiss.recon-demo.spec.plist  io.hotchkiss.recon-demo.tunnel.plist  launch-sasquatch.sh  refresh-demos.sh
deploy/sandbox/: recon-demo-sasquatch.sb  recon-demo-spec.sb
docs/: bs_design_thoughts.md  x_2_design_thoughts.md  x_4_5_design_thoughts.md
docs/audits/: aa_a_6_picker_enumeration_spike.md  aa_a_dropdown_audit.md  aa_a_race_investigation.md  aa_e_1_account_search_pattern.md  ai_1_editor_surface_audit.md  am_0_2_utility_mapping.md  av_0_limits_metadata_rename_audit.md  ax_0_concat_agg_audit.md  ay_0_convergence_design.md  az_0_semantic_lock_schema.md  bb_0_a_validator_circulars.md  bc_0_interval_api_spike.md  bc_12_config_kv_spike.md  bd_0_asofframe_spike.md  bd_6_retired_temporal_constants.md  be_0_cross_corpus_lint_spike.md  be_4_corpus_duplication_sweep.md  be_4_phase_b_json_review.md  be_4_phase_b_smalltail_review.md  be_4_phase_b_unit_review.md  be_7_c1_fixture_survey.md  be_7_pyright_tests_spike.md  bf_0_field_completeness_spike.md  bf_0_pyright_src_spike.md  bf_4_pyright_tests_residual.md  bg_0_dashboard_honesty_audit.md  bh_0_finding_state_snapshot.md  bj_1_ci_test_selection_rationale.md  bl_0_shared_state_keying_smell.md  bm_0_date_picker_unification_spike.md  bs_4_arch_shift_spike.md  bs_6_kv_static_collapse_audit.md  bt_0_replan.md  bt_cold_read.md  bt_cold_read_v1_source_only.md  bt_design_mockups.md  bta_0_replan.md  bta_design_mockups.md  bx_0_7_replan_with_triage.md  bx_0_replan.md  (+23 more)
docs/operations/: mac-mini-demo-host.md
docs/reference/: oracle-19c-constraints.md  quicksight-quirks.md
examples/: config.yaml
quicksight-gen-shim/: README.md  pyproject.toml
quicksight-gen-shim/src/quicksight_gen/: __init__.py
scripts/: build_app2_css.py  disable_quicksight_genai.sh  dump_top_queries.py  nuke_quicksight.sh  provision_demo_instance.sh  spike_x2r_qs_event_capture.py  studio-with-pg-source.sh
spike/y3g/: account_network_sa.py  account_network_sg.py  capture_baseline.py  findings.md  json_path_sg.py  json_recheck_sg.py
spike/y6/: diff.py  measure.py
src/quicksight_gen/: __init__.py  main.py  mkdocs.yml
src/recon_gen/: __init__.py  main.py  mkdocs.yml
tests/: _test_helpers.py  conftest.py
tests/audit/: _dashboard_extract.py  _inv_dashboard_extract.py  _matview_extract.py  _pdf_extract.py  _scenario_expectations.py  test_cli_smoke.py  test_dashboard_extract.py  test_data_apply_populates_config.py  test_pdf_extract.py  test_pdf_matches_scenario.py  test_pdf_sqlite.py  test_persona_clean.py  test_scenario_expectations.py  test_sql.py  test_template_input.py
tests/cli/: test_dashboards_smoke.py  test_db_fetcher.py  test_serve_smoke.py
tests/data/: test_auto_scenario.py  test_auto_scenario_broad.py  test_cli_smoke.py  test_l2_baseline_seed.py  test_l2_baseline_seed_sqlite.py  test_l2_chain_exception_baseline_sqlite.py  test_l2_pipeline.py  test_l2_runtime_assertions.py  test_l2_seed_contract.py  test_locked_seeds.py  test_seed_id_column_widths.py  test_seed_persona_clean.py  test_semantic_locks.py  test_sqlite_e2e_local_loop.py
tests/docs/: _handbook_build.py  test_docs_links.py  test_docs_persona_neutral.py  test_docs_theme.py  test_handbook_diagrams.py  test_handbook_vocabulary.py
tests/e2e/: _capture.py  _daily_statement_pick.py  _harness_html2.py  _harness_l1_assertions.py  _harness_studio_editor.py  _kitchen_app.py  _kpi_parse.py  _l2ft_dropdown_walk.py  _layer1_query.py  _picker_anchor.py  _picker_walk.py  _seed_helpers.py  _studio_deploy_helpers.py  conftest.py  test_audit_dashboard_agreement.py  test_audit_pdf_render_verify.py  test_audit_pdf_sqlite.py  test_dashboard_driver.py  test_dataset_sql_smoke.py  test_demo_apply_row_counts.py  test_deploy_pipeline_pg_to_sqlite.py  test_exec_dashboard_renders.py  test_exec_dashboard_structure.py  test_exec_deployed_resources.py  test_exec_sheet_visuals.py  test_harness_browser.py  test_harness_end_to_end.py  test_harness_seed.py  test_html2_executives.py  test_html2_executives_live.py  test_html2_l2ft.py  test_html2_money_trail.py  test_html2_table_pagination.py  test_inv_dashboard_agreement.py  test_inv_dashboard_renders.py  test_inv_dashboard_structure.py  test_inv_deployed_resources.py  test_inv_drilldown.py  test_inv_filters.py  test_inv_sheet_visuals.py  (+22 more)
tests/integration/: verify_dataset_sql.py  verify_demo_apply.py
tests/js/: test_bootstrap.py  test_data_generation_poller.py  test_diagram_overlays.py  test_error_toasts.py  test_filter_primitives.py  test_render_barchart.py  test_render_kpi.py  test_render_linechart.py  test_render_sankey.py  test_render_table.py  test_row_drills.py
tests/json/: test_app_info.py  test_bar_chart_axis_labels.py  test_cleanup.py  test_cli_json.py  test_cli_smoke.py  test_cross_sheet_drill_date_widening.py  test_dataset_contract.py  test_dataset_parameters.py  test_drill.py  test_emit_cross_reference_consistency.py  test_executives.py  test_investigation.py  test_kitchen_app.py  test_l1_dashboard.py  test_l2_flow_tracing.py  test_l2_flow_tracing_matrix.py  test_screenshot_harness.py  test_table_column_headers.py  test_text_box_safety.py
tests/l2/: _kitchen.yaml  fuzz.py  sasquatch_pr.yaml  spec_example.yaml
tests/schema/: test_cli_smoke.py  test_l2_schema.py  test_l2_schema_oracle.py  test_l2_schema_sqlite.py  test_sql_dialect.py
tests/unit/: test_aa_a_single_value_clauses.py  test_aging.py  test_ap0_as_of_frame.py  test_ap1_view_primitive.py  test_ap2_stateful_generator.py  (+156 more)
(+360 files in other folders)
