[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[project]
name = "quicksight-gen"
dynamic = ["version"]
description = "Programmatic AWS QuickSight analysis generator for financial reporting"
readme = "README.md"
license = "MIT"
requires-python = ">=3.13"
keywords = [
    "quicksight",
    "aws",
    "dashboards",
    "reconciliation",
    "analytics",
    "finance",
]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "Intended Audience :: Financial and Insurance Industry",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.13",
    "Topic :: Office/Business :: Financial :: Accounting",
    "Topic :: Software Development :: Code Generators",
]
dependencies = [
    "click>=8.1",
    "pyyaml>=6.0",
    "graphviz>=0.20",
]

[project.urls]
Homepage = "https://chotchki.github.io/Quicksight-Generator/"
Documentation = "https://chotchki.github.io/Quicksight-Generator/"
Source = "https://github.com/chotchki/Quicksight-Generator"
Issues = "https://github.com/chotchki/Quicksight-Generator/issues"
Changelog = "https://github.com/chotchki/Quicksight-Generator/blob/main/RELEASE_NOTES.md"

[project.optional-dependencies]
deploy = [
    # `quicksight-gen json apply --execute` (push JSON to AWS) +
    # `json clean --execute` (sweep ManagedBy:quicksight-gen resources)
    # both go through boto3. botocore[crt] pulls awscrt — required for
    # the SSO / login credential provider, which trips
    # MissingDependencyException at boto3 client init when operators
    # use AWS SSO / `aws sso login`. Bare install (without this extra)
    # is fine for emit-only — `json apply` writes JSON to disk without
    # touching AWS — boto3 is lazily imported in the `--execute` branch.
    "boto3>=1.34",
    "botocore[crt]>=1.34",
]
demo = [
    # Phase X.2.n — psycopg3 (the `psycopg` package, not psycopg2).
    # Async-capable via psycopg.AsyncConnection while keeping the same
    # `:name` placeholder format we use across PG / Oracle / SQLite.
    # The ``[pool]`` extra pulls in psycopg_pool for the X.2.n.2
    # AsyncConnectionPool — the App2 server uses it to bound DB
    # concurrency separately from the asyncio worker pool.
    "psycopg[binary,pool]>=3.1",
]
demo-oracle = [
    # Phase P — oracledb thin client. No Oracle Instant Client install
    # needed in thin mode; falls back to thick mode automatically when
    # the client libraries are present (and faster).
    "oracledb>=2.0",
]
audit = [
    # Phase U — `quicksight-gen audit apply --execute` writes a PDF
    # reconciliation report. reportlab is pure Python (PyPI wheels,
    # no system deps — preserves the Phase T win). pypdf is used by
    # the U.8 end-to-end smoke test to extract text from the
    # generated PDF + assert sentinel sections are present.
    "reportlab>=4.0",
    "pypdf>=4.0",
    # U.7.b — auto-sign the rendered PDF via pyHanko when
    # config.yaml carries a `signing:` block (PEM RSA key + cert).
    # Optional at runtime: only loaded when signing kicks in;
    # absent config.yaml signing block = unsigned PDF (back-compat).
    "pyhanko>=0.30",
]
serve = [
    # Phase X.2 — self-hosted dashboard renderer (HTMX + d3 + Tailwind
    # via CDN). Starlette is the ASGI framework; uvicorn[standard]
    # bundles uvloop + httptools for the production-grade server.
    # python-multipart is required for Starlette to parse HTMX form
    # POSTs (the swap-on-mutation pattern). httpx is pulled in for
    # Starlette's TestClient (tests/unit/test_html_server.py).
    "starlette>=0.40",
    "uvicorn[standard]>=0.30",
    "python-multipart>=0.0.18",
    "httpx>=0.27",
    # Phase X.2.n — async DB drivers. Stdlib sqlite3 is sync-only;
    # aiosqlite is the async wrapper that lets the App2 server use a
    # SQLite cfg without blocking the asyncio loop. Cheap dependency
    # (~30 KB), pulls nothing extra.
    "aiosqlite>=0.19",
]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
    "boto3>=1.34",
    # botocore[crt] pulls awscrt — required for the SSO / login
    # credential provider, which trips MissingDependencyException at
    # boto3 client init when developers use AWS SSO / `aws sso login`.
    "botocore[crt]>=1.34",
    "boto3-stubs[quicksight,rds]>=1.34",
    # Y.2.gate.b.2.impl — Docker-backed local DB containers.
    # PG (b.2.impl.schema) + Oracle (b.2.impl.oracle). Oracle's
    # container is multi-GB and slower to start (~20-30s on
    # gvenzl/oracle-free:23-faststart vs. ~10s on PG); operator
    # selects per `--variants=` arg, so a tight inner loop on local-pg
    # never pays the Oracle pull cost. SQLite intentionally absent:
    # it's a single-file DB, no testcontainer needed (b.2.impl.sqlite
    # spec).
    "testcontainers[postgres,oracle]>=3.7",
    "psycopg[binary,pool]>=3.1",
    "aiosqlite>=0.19",
    # P.9d — oracledb thin client so the e2e harness can connect to
    # an Oracle dialect config without a separate `[demo-oracle]` install.
    "oracledb>=2.0",
    # Phase U — audit PDF generation; pulled into [dev] so tests/audit/
    # runs without a separate install step.
    "reportlab>=4.0",
    "pypdf>=4.0",
    "build>=1.0",
    "twine>=5.0",
    "pyright>=1.1.380",
    # v8.5.2 — pulled into [dev] so pyright (in the pytest sessionstart
    # gate) can resolve Playwright's PEP 561 inline stubs when type-
    # checking ``common/browser/helpers.py``. The Python package alone
    # is enough for stub resolution; ``playwright install`` (which
    # downloads browser binaries) is still only needed for the e2e
    # browser tests.
    "playwright>=1.40",
    # Phase X.2 spike — Starlette server + TestClient for HTML renderer
    # unit tests. Pulled into [dev] so the spike's tests run in the
    # default `uv sync --extra dev` developer setup without a separate
    # `--extra serve`.
    "starlette>=0.40",
    "uvicorn[standard]>=0.30",
    "python-multipart>=0.0.18",
    "httpx>=0.27",
]
docs = [
    "mkdocs>=1.6",
    "mkdocs-material>=9.5",
    "mkdocstrings[python]>=0.26",
    # Auto-generated CLI reference page from the Click command tree
    # (consumed by docs/reference/cli.md via the ``::: mkdocs-click`` directive).
    "mkdocs-click>=0.8",
    # Phase O.1.a — Jinja2 templating in markdown (vocabulary substitution)
    # + ``{{ diagram(...) }}`` macro hook for the O.1.c render pipeline.
    "mkdocs-macros-plugin>=1.3",
    # Graphviz Python wrapper for L2 topology + dataflow diagram
    # construction. Phase T (v8.1.0) moved rendering to the browser
    # via @hpcc-js/wasm-graphviz, so the system ``dot`` binary is no
    # longer required — the Python lib only constructs DOT source
    # strings (``Digraph().source``), never invokes ``.pipe()``.
    "graphviz>=0.20",
]
e2e = [
    "pytest>=7.0",
    "pytest-xdist>=3.5",
    "boto3>=1.34",
    # See [dev] — botocore[crt] adds awscrt for the SSO login path.
    "botocore[crt]>=1.34",
    "playwright>=1.40",
]

[project.scripts]
quicksight-gen = "quicksight_gen.cli:main"

[tool.setuptools.packages.find]
where = ["src"]
# Y.2.gate.b.13 — _dev/ holds the test layer chain runner; importable from
# conftest + tests during dev / CI but excluded from the customer wheel.
# Wheel-build verification: see Y.2.gate.c (CI assertion that ``unzip -l``
# of the built wheel returns no _dev matches).
exclude = ["quicksight_gen._dev", "quicksight_gen._dev.*"]

[tool.setuptools.package-data]
quicksight_gen = [
    "apps/l1_dashboard/_default_l2.yaml",
    # Bundled mkdocs config so ``docs apply`` works from an installed
    # wheel. Lives one level up from ``docs/`` (mkdocs rejects
    # ``docs_dir: .``).
    "mkdocs.yml",
    # Bundled L2 fixtures so ``docs apply`` from an installed wheel
    # can render without the operator's tests/l2/ checkout. Synced to
    # ``tests/l2/`` by ``tests/unit/test_l2_fixtures_sync.py``.
    "_l2_fixtures/*.yaml",
    "docs/**/*.md",
    "docs/**/*.svg",
    "docs/**/*.png",
    "docs/**/*.css",
    "docs/**/*.js",
    "docs/**/*.yaml",
    "docs/**/*.yml",
    # Phase O.1.c — hand-authored Graphviz diagrams.
    "docs/**/*.dot",
    # X.2 spike — built Tailwind CSS for the HTML renderer's
    # static page shell. ``output.css`` is the build artifact;
    # ``input.css`` is the @source-config source. Both shipped so
    # an installed wheel can serve the smoke runner without
    # forcing the user to run the Tailwind CLI.
    "common/html/assets/*.css",
    # X.2.a.1 — JS extracted to standalone .js files so biome can
    # lint / format / minify them. render.py loads at module-import
    # time; package_data ships them inside the wheel.
    "common/html/assets/js/*.js",
]

[tool.setuptools.dynamic]
version = {attr = "quicksight_gen.__version__"}

[tool.pytest.ini_options]
testpaths = ["tests"]
markers = [
    "e2e: end-to-end tests requiring deployed AWS resources",
    "api: API-only e2e tests (no browser)",
    "browser: browser-based e2e tests (requires Playwright)",
]

# W.8b — coverage config. ``source = ["quicksight_gen"]`` scopes
# coverage to the package; without it, ``coverage report`` lumps in
# the stdlib / third-party files that happened to execute. The CI
# matrix sets ``COVERAGE_FILE=.coverage.py<version>`` per entry so
# each matrix entry writes a uniquely-named data file the
# ``coverage`` aggregator job can ``coverage combine``.
[tool.coverage.run]
source = ["quicksight_gen"]
omit = [
    "*/tests/*",
    "*/__main__.py",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
]
show_missing = true
skip_covered = false
precision = 1

# Pyright is configured strict on the L.1 tree primitives. Scope stays
# tight for now — tests come in a follow-up sub-step (pytest patterns
# trip a lot of strict rules); apps stay outside until each L.{2,3,4}.13
# cleanup retires the imperative builders. Models + drill helpers are
# reachable through the tree but stay outside strict; pyright still
# resolves them via extraPaths for inference.
[tool.pyright]
include = [
    "src/quicksight_gen/common/tree",
    "src/quicksight_gen/common/l2",
    "src/quicksight_gen/common/sql",
    "src/quicksight_gen/common/browser",
    "src/quicksight_gen/common/dataset_contract.py",
    "src/quicksight_gen/common/env_keys.py",
    "src/quicksight_gen/common/models.py",
    "src/quicksight_gen/common/variant.py",
    # X.2.o.1 — async DB / App2 server surfaces. Added at strict
    # together because they form one cohesive subsystem (pool →
    # executor → fetcher → server route). Config gets pulled in
    # alongside since X.2.n.6's ``app2_db_pool_size`` validation
    # logic lives there.
    "src/quicksight_gen/common/db.py",
    "src/quicksight_gen/common/config.py",
    "src/quicksight_gen/common/html/_sql_executor.py",
    "src/quicksight_gen/common/html/_tree_fetcher.py",
    "src/quicksight_gen/common/html/server.py",
    # Y.2.gate runner — dev tooling, kept strict from the start.
    "src/quicksight_gen/_dev",
]
pythonVersion = "3.13"
typeCheckingMode = "strict"
extraPaths = ["src"]
# Pin the venv so pyright resolves third-party stubs (Playwright,
# boto3-stubs, psycopg). Without this, ad-hoc ``pyright <file>``
# invocations on files in scope above can't resolve those packages
# and surface ~300 false-positive "type is unknown" cascades. The
# ``venvPath`` is the parent directory; ``venv`` is the directory
# name inside it.
venvPath = "."
venv = ".venv"
# Module-private leading-underscore helpers are intentionally shared
# across tree submodules (e.g. `_calc_field_in` in calc_fields.py used
# by filters.py / actions.py). Pyright flags this under `reportPrivateUsage`
# but the codebase treats them as package-internal — suppressing keeps
# the convention without renaming everything to drop the underscore.
reportPrivateUsage = false

[dependency-groups]
dev = [
    "pytailwindcss>=0.3.0",
]
