[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[project]
name = "recon-gen"
dynamic = ["version"]
description = "Outside validation that your financial system is sound — tells midsize financial institutions whether their books balance day to day, and when they don't, where to look first. Ships AWS QuickSight, self-hosted HTMX, and regulator-ready PDF surfaces from one L2 institution model."
readme = "README.md"
license = "MIT"
requires-python = ">=3.13"
keywords = [
    "quicksight",
    "aws",
    "dashboards",
    "reconciliation",
    "analytics",
    "finance",
]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "Intended Audience :: Financial and Insurance Industry",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.13",
    "Topic :: Office/Business :: Financial :: Accounting",
    "Topic :: Software Development :: Code Generators",
]
dependencies = [
    "click>=8.1",
    "pyyaml>=6.0",
    "graphviz>=0.20",
]

[project.urls]
Homepage = "https://chotchki.github.io/recon-gen/"
Documentation = "https://chotchki.github.io/recon-gen/"
Source = "https://github.com/chotchki/recon-gen"
Issues = "https://github.com/chotchki/recon-gen/issues"
Changelog = "https://github.com/chotchki/recon-gen/blob/main/RELEASE_NOTES.md"

[project.optional-dependencies]
deploy = [
    # `recon-gen json apply --execute` (push JSON to AWS) +
    # `json clean --execute` (sweep ManagedBy:recon-gen resources)
    # both go through boto3. botocore[crt] pulls awscrt — required for
    # the SSO / login credential provider, which trips
    # MissingDependencyException at boto3 client init when operators
    # use AWS SSO / `aws sso login`. Bare install (without this extra)
    # is fine for emit-only — `json apply` writes JSON to disk without
    # touching AWS — boto3 is lazily imported in the `--execute` branch.
    "boto3>=1.34",
    "botocore[crt]>=1.34",
]
demo = [
    # Phase X.2.n — psycopg3 (the `psycopg` package, not psycopg2).
    # Async-capable via psycopg.AsyncConnection while keeping the same
    # `:name` placeholder format we use across PG / Oracle / SQLite.
    # The ``[pool]`` extra pulls in psycopg_pool for the X.2.n.2
    # AsyncConnectionPool — the App2 server uses it to bound DB
    # concurrency separately from the asyncio worker pool.
    "psycopg[binary,pool]>=3.1",
]
demo-oracle = [
    # Phase P — oracledb thin client. No Oracle Instant Client install
    # needed in thin mode; falls back to thick mode automatically when
    # the client libraries are present (and faster).
    "oracledb>=2.0",
]
audit = [
    # Phase U — `recon-gen audit apply --execute` writes a PDF
    # reconciliation report. reportlab is pure Python (PyPI wheels,
    # no system deps — preserves the Phase T win). pypdf is used by
    # the U.8 end-to-end smoke test to extract text from the
    # generated PDF + assert sentinel sections are present.
    "reportlab>=4.0",
    "pypdf>=4.0",
    # U.7.b — auto-sign the rendered PDF via pyHanko when
    # config.yaml carries a `signing:` block (PEM RSA key + cert).
    # Optional at runtime: only loaded when signing kicks in;
    # absent config.yaml signing block = unsigned PDF (back-compat).
    "pyhanko>=0.30",
]
serve = [
    # Phase X.2 — self-hosted dashboard renderer. The browser-side
    # JS/CSS (htmx, d3, the filter widgets, the Tailwind output) ship
    # *inside the wheel* and are served from /static/ — App 2 needs no
    # internet at runtime (X.2.p). Starlette is the ASGI framework;
    # uvicorn[standard] bundles uvloop + httptools for the
    # production-grade server.
    # python-multipart is required for Starlette to parse HTMX form
    # POSTs (the swap-on-mutation pattern). httpx is pulled in for
    # Starlette's TestClient (tests/unit/test_html_server.py).
    "starlette>=0.40",
    "uvicorn[standard]>=0.30",
    "python-multipart>=0.0.18",
    "httpx>=0.27",
    # Phase X.2.n — async DB drivers. Stdlib sqlite3 is sync-only;
    # aiosqlite is the async wrapper that lets the App2 server use a
    # SQLite cfg without blocking the asyncio loop. Cheap dependency
    # (~30 KB), pulls nothing extra.
    "aiosqlite>=0.19",
    # BF.9 — markdown rendering for the Studio editor's textarea
    # Preview tab (description fields opt-in via FieldSpec.preview_
    # markdown). Lazy-imported in `_studio_editor_routes.py`; pulled
    # in here so the [serve] extras pin all Studio-runtime needs in
    # one place. v11.22.0 CI failure (missing in pyproject) catches
    # this: a Studio routes unit test exercises the preview path and
    # ModuleNotFoundError'd in CI even though it worked locally.
    "markdown>=3.6",
]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
    # The runner uses `pytest -n auto` on every layer, and conftest bumps
    # the xdist dist mode to `loadgroup` so `@pytest.mark.xdist_group`
    # works. xdist therefore belongs in [dev], not just [e2e] — `uv sync
    # --extra dev && pytest -n auto` should work.
    "pytest-xdist>=3.5",
    # Y.7-followup — the runner's browser layer passes `--reruns 2` so a
    # genuinely-flaky live-cloud e2e (QS embed-render under -n 4 worker
    # contention occasionally drops a visual from the DOM at snapshot
    # time — passes on re-run) auto-retries before halting the chain. A
    # test that's broken (not flaky) fails 3× → still halts.
    "pytest-rerunfailures>=14.0",
    "boto3>=1.34",
    # botocore[crt] pulls awscrt — required for the SSO / login
    # credential provider, which trips MissingDependencyException at
    # boto3 client init when developers use AWS SSO / `aws sso login`.
    "botocore[crt]>=1.34",
    # BE.7.B (2026-05-26) — `sts` + `s3` added on top of the existing
    # `quicksight,rds` so pyright can resolve the full surface tests/
    # touches via boto3-stubs. The stubs only help once test-side
    # fixtures are also annotated (the test fixtures' `-> dict`
    # returns erase the TypedDict at the consumer boundary).
    "boto3-stubs[quicksight,rds,sts,s3]>=1.34",
    # Y.2.gate.b.2.impl — Docker-backed local DB containers.
    # PG (b.2.impl.schema) + Oracle (b.2.impl.oracle). Oracle's
    # container is multi-GB and slower to start (~20-30s on
    # gvenzl/oracle-free:23-faststart vs. ~10s on PG); operator
    # selects per `--variants=` arg, so a tight inner loop on local-pg
    # never pays the Oracle pull cost. SQLite intentionally absent:
    # it's a single-file DB, no testcontainer needed (b.2.impl.sqlite
    # spec).
    "testcontainers[postgres,oracle]>=3.7",
    "psycopg[binary,pool]>=3.1",
    "aiosqlite>=0.19",
    # P.9d — oracledb thin client so the e2e harness can connect to
    # an Oracle dialect config without a separate `[demo-oracle]` install.
    "oracledb>=2.0",
    # Phase U — audit PDF generation; pulled into [dev] so tests/audit/
    # runs without a separate install step.
    "reportlab>=4.0",
    "pypdf>=4.0",
    "build>=1.0",
    "twine>=5.0",
    "pyright>=1.1.380",
    # NB: biome (the JS linter, gated alongside pyright in the pytest
    # sessionstart hook — conftest.py) is NOT pip-installable here yet. The
    # Biome project hasn't published an *official* PyPI package (in flight:
    # biomejs/biome#8818); the unofficial `biome-js` wrapper ships only a
    # `manylinux_2_28_x86_64` wheel (no macOS / arm64 / sdist) and is a
    # stale single release on Biome 2.3.x — adding it would break
    # `uv sync --extra dev` off linux-x86_64. So biome stays a system
    # binary — brew locally, `biomejs/setup-biome` in CI — and the conftest
    # gate skips cleanly when it isn't on PATH. **Revisit when biomejs/biome#8818
    # lands**: add the official package to `[dev]`, drop the `setup-biome` CI
    # step + the system-binary fallback comment in conftest / install.md.
    # v8.5.2 — pulled into [dev] so pyright (in the pytest sessionstart
    # gate) can resolve Playwright's PEP 561 inline stubs when type-
    # checking ``common/browser/helpers.py``. The Python package alone
    # is enough for stub resolution; ``playwright install`` (which
    # downloads browser binaries) is still only needed for the e2e
    # browser tests.
    "playwright>=1.40",
    # Phase X.2 spike — Starlette server + TestClient for HTML renderer
    # unit tests. Pulled into [dev] so the spike's tests run in the
    # default `uv sync --extra dev` developer setup without a separate
    # `--extra serve`.
    "starlette>=0.40",
    "uvicorn[standard]>=0.30",
    "python-multipart>=0.0.18",
    "httpx>=0.27",
    # BF.9 — markdown rendering for the Studio editor's textarea
    # Preview tab. Mirror of [serve] (also pinned there). v11.22.1
    # CI failure: adding to [serve] alone wasn't enough; the
    # unit-test CI job uses `uv sync --extra dev --extra audit`
    # (no `--extra serve`), so studio routes tests (which spin a
    # Starlette TestClient + hit the markdown-preview path) still
    # tripped ModuleNotFoundError. Pin here so [dev] is self-
    # sufficient for the test surface — matches the existing
    # starlette mirror pattern.
    "markdown>=3.6",
]
docs = [
    "mkdocs>=1.6",
    "mkdocs-material>=9.5",
    "mkdocstrings[python]>=0.26",
    # Auto-generated CLI reference page from the Click command tree
    # (consumed by docs/reference/cli.md via the ``::: mkdocs-click`` directive).
    "mkdocs-click>=0.8",
    # Phase O.1.a — Jinja2 templating in markdown (vocabulary substitution)
    # + ``{{ diagram(...) }}`` macro hook for the O.1.c render pipeline.
    "mkdocs-macros-plugin>=1.3",
    # Graphviz Python wrapper for L2 topology + dataflow diagram
    # construction. Phase T (v8.1.0) moved rendering to the browser
    # via @hpcc-js/wasm-graphviz, so the system ``dot`` binary is no
    # longer required — the Python lib only constructs DOT source
    # strings (``Digraph().source``), never invokes ``.pipe()``.
    "graphviz>=0.20",
]
e2e = [
    "pytest>=7.0",
    "pytest-xdist>=3.5",
    "boto3>=1.34",
    # See [dev] — botocore[crt] adds awscrt for the SSO login path.
    "botocore[crt]>=1.34",
    "playwright>=1.40",
    # X.2.u.3 — the browser e2e suite is now parametrized over
    # [qs, app2]: App2Driver serves the bundled HTMX renderer in-process
    # (common/html/server.py imports starlette), and `serving(...)` with a
    # live-DB fetcher uses the aiosqlite async driver for SQLite cfgs. So
    # the App2 server stack is a hard dep of `pytest tests/e2e/ -m browser`
    # — keep this list in sync with [serve]. (Caught by the nightly
    # e2e-pg-browser cron: `uv sync --extra e2e` without these →
    # ModuleNotFoundError: No module named 'starlette' at collection.)
    "starlette>=0.40",
    "uvicorn[standard]>=0.30",
    "python-multipart>=0.0.18",
    "httpx>=0.27",
    "aiosqlite>=0.19",
    # BF.9 — same mirror as [dev]; the e2e suite spins App2Driver
    # which hits the studio editor's markdown-preview route in some
    # cells. Keep in sync with [serve] + [dev].
    "markdown>=3.6",
]

[project.scripts]
recon-gen = "recon_gen.cli:main"

[tool.setuptools.packages.find]
where = ["src"]
# Y.2.gate.b.13 — _dev/ holds the test layer chain runner; importable from
# conftest + tests during dev / CI but excluded from the customer wheel.
# Wheel-build verification: see Y.2.gate.c (CI assertion that ``unzip -l``
# of the built wheel returns no _dev matches).
exclude = ["recon_gen._dev", "recon_gen._dev.*"]

[tool.setuptools.package-data]
recon_gen = [
    # PEP 561 marker — signals to downstream consumers (pyright /
    # mypy / pyre) that this package ships inline type hints they
    # should honor. Without the marker, type-checkers fall back to
    # treating every public API as `Any`, defeating the strict-typed
    # surface this codebase invests in. Empty file by convention; the
    # presence at the package root is the signal.
    "py.typed",
    "apps/l1_dashboard/_default_l2.yaml",
    # Bundled mkdocs config so ``docs apply`` works from an installed
    # wheel. Lives one level up from ``docs/`` (mkdocs rejects
    # ``docs_dir: .``).
    "mkdocs.yml",
    # Bundled L2 fixtures so ``docs apply`` from an installed wheel
    # can render without the operator's tests/l2/ checkout. Synced to
    # ``tests/l2/`` by ``tests/unit/test_l2_fixtures_sync.py``.
    "_l2_fixtures/*.yaml",
    "docs/**/*.md",
    "docs/**/*.svg",
    "docs/**/*.png",
    "docs/**/*.css",
    "docs/**/*.js",
    "docs/**/*.yaml",
    "docs/**/*.yml",
    # Phase O.1.c — hand-authored Graphviz diagrams.
    "docs/**/*.dot",
    # X.2 spike — built Tailwind CSS for the HTML renderer's
    # static page shell. ``output.css`` is the build artifact;
    # ``input.css`` is the @source-config source. Both shipped so
    # an installed wheel can serve the smoke runner without
    # forcing the user to run the Tailwind CLI.
    "common/html/assets/*.css",
    # X.2.a.1 — JS extracted to standalone .js files so biome can
    # lint / format / minify them. render.py loads at module-import
    # time; package_data ships them inside the wheel.
    "common/html/assets/js/*.js",
    # X.2.p — vendored third-party browser libs (htmx / d3 / d3-sankey /
    # tom-select / flatpickr / nouislider) the page shell loads from
    # ``/static/vendor/...`` instead of a CDN. Pre-built minified dist
    # files committed under ``assets/vendor/{js,css}/``; ``vendor.lock``
    # carries the provenance + sha256s. Shipped so a `pip install
    # recon-gen[serve]` App 2 works offline. Refresh recipe:
    # ``scripts/vendor_js_deps.py``.
    "common/html/assets/vendor/js/*.js",
    "common/html/assets/vendor/css/*.css",
    "common/html/assets/vendor/vendor.lock",
    # X.4.b/f/h — Studio chrome assets (diagram-svg.css for the SVG-only
    # cascades + diagram.js) the ``/studio/static`` mount serves.
    # Post-AM.4: only diagram-svg.css remains (editor.css / data.css
    # retired; diagram.css renamed). Glob still picks up the .css/.js.
    # Loaded at runtime via ``Path(__file__).parent / "_studio_assets"``;
    # without this glob the wheel ships an empty directory and the studio
    # 404s on its own CSS / JS.
    "common/html/_studio_assets/*.css",
    "common/html/_studio_assets/*.js",
]

[tool.setuptools.dynamic]
version = {attr = "recon_gen.__version__"}

[tool.pytest.ini_options]
testpaths = ["tests"]
# NOTE: the ``loadgroup`` xdist distribution (so ``@pytest.mark.xdist_group``
# markers pin grouped tests to one worker — see Y.7-followup) is set in
# ``tests/conftest.py::pytest_configure`` ONLY when xdist is active, NOT here
# via ``addopts`` — a no-xdist env (the CI ``test`` job, the wheel-smoke job)
# chokes on an unrecognized ``--dist``.
markers = [
    "e2e: end-to-end tests requiring deployed AWS resources",
    "api: API-only e2e tests (no browser)",
    "browser: browser-based e2e tests (requires Playwright)",
]

# W.8b — coverage config. ``source = ["recon_gen"]`` scopes
# coverage to the package; without it, ``coverage report`` lumps in
# the stdlib / third-party files that happened to execute. The CI
# matrix sets ``COVERAGE_FILE=.coverage.py<version>`` per entry so
# each matrix entry writes a uniquely-named data file the
# ``coverage`` aggregator job can ``coverage combine``.
[tool.coverage.run]
source = ["recon_gen"]
omit = [
    "*/tests/*",
    "*/__main__.py",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
]
show_missing = true
skip_covered = false
precision = 1

# Pyright is configured strict on the L.1 tree primitives. Scope stays
# tight for now — tests come in a follow-up sub-step (pytest patterns
# trip a lot of strict rules); apps stay outside until each L.{2,3,4}.13
# cleanup retires the imperative builders. Models + drill helpers are
# reachable through the tree but stay outside strict; pyright still
# resolves them via extraPaths for inference.
[tool.pyright]
include = [
    "src/recon_gen/common/tree",
    "src/recon_gen/common/l2",
    "src/recon_gen/common/sql",
    "src/recon_gen/common/browser",
    "src/recon_gen/common/dataset_contract.py",
    "src/recon_gen/common/env_keys.py",
    "src/recon_gen/common/models.py",
    "src/recon_gen/common/money.py",
    "src/recon_gen/common/variant.py",
    # X.2.o.1 — async DB / App2 server surfaces. Added at strict
    # together because they form one cohesive subsystem (pool →
    # executor → fetcher → server route). Config gets pulled in
    # alongside since X.2.n.6's ``app2_db_pool_size`` validation
    # logic lives there.
    "src/recon_gen/common/db.py",
    "src/recon_gen/common/config.py",
    "src/recon_gen/common/html/_sql_executor.py",
    "src/recon_gen/common/html/_tree_fetcher.py",
    "src/recon_gen/common/html/server.py",
    # Y.2.gate runner — dev tooling, kept strict from the start.
    "src/recon_gen/_dev",
    # AY.2.aa — spine in strict scope; AY.2.b's new generators
    # born strict-clean.
    "src/recon_gen/common/spine",
]
pythonVersion = "3.13"
typeCheckingMode = "strict"
extraPaths = ["src"]
# Pin the venv so pyright resolves third-party stubs (Playwright,
# boto3-stubs, psycopg). Without this, ad-hoc ``pyright <file>``
# invocations on files in scope above can't resolve those packages
# and surface ~300 false-positive "type is unknown" cascades. The
# ``venvPath`` is the parent directory; ``venv`` is the directory
# name inside it.
venvPath = "."
venv = ".venv"
# Module-private leading-underscore helpers are intentionally shared
# across tree submodules (e.g. `_calc_field_in` in calc_fields.py used
# by filters.py / actions.py). Pyright flags this under `reportPrivateUsage`
# but the codebase treats them as package-internal — suppressing keeps
# the convention without renaming everything to drop the underscore.
reportPrivateUsage = false

[dependency-groups]
dev = [
    "pytailwindcss>=0.3.0",
]
