[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

# AC.F.1 — PyPI deprecation shim for the `quicksight-gen` → `recon-gen`
# rename (v11.0.0). This package keeps `pip install quicksight-gen` working
# for a 1-2 month grace window (AC.locked / AC.F.3): it has no code,
# depends only on the canonical `recon-gen` at the same version, and its
# `quicksight_gen/__init__.py` emits a one-time DeprecationWarning on
# import telling operators to migrate.
#
# Drop-timeline (AC.F.3): first release published >= (v11.0.0 publish
# date + 30-60 days) drops this whole directory from the build.
#
# Build: `cd quicksight-gen-shim && python -m build` produces the
# `quicksight_gen-*.whl` shim wheel (separate from `recon_gen-*.whl`).
# Both publish to PyPI as siblings.

[project]
name = "quicksight-gen"
version = "11.0.0a4"
description = "Deprecated rename shim — install `recon-gen` instead (this package will be removed in ~1-2 months)."
readme = "README.md"
license = "MIT"
requires-python = ">=3.13"
keywords = ["deprecated", "shim", "recon-gen"]
classifiers = [
    "Development Status :: 7 - Inactive",
    "Intended Audience :: Developers",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.13",
]
dependencies = [
    # Pin to the same version as this shim — the shim publishes once
    # per recon-gen release during the grace window so the version
    # pair stays in lockstep.
    "recon-gen==11.0.0a4",
]

[project.urls]
Homepage = "https://github.com/chotchki/recon-gen"
Source = "https://github.com/chotchki/recon-gen"
Issues = "https://github.com/chotchki/recon-gen/issues"

[tool.setuptools.packages.find]
where = ["src"]
