[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

# AC.F.1 — PyPI deprecation shim for the `quicksight-gen` → `recon-gen`
# rename (v11.0.0). This package keeps `pip install quicksight-gen` working
# for a 1-2 month grace window (AC.locked / AC.F.3): it has no code,
# depends only on the canonical `recon-gen` at the same version, and its
# `quicksight_gen/__init__.py` emits a one-time DeprecationWarning on
# import telling operators to migrate.
#
# Drop-timeline (AC.F.3): first release published >= (v11.0.0 publish
# date + 30-60 days) drops this whole directory from the build.
#
# Build: `cd quicksight-gen-shim && python -m build` produces the
# `quicksight_gen-*.whl` shim wheel (separate from `recon_gen-*.whl`).
# Both publish to PyPI as siblings.

[project]
name = "quicksight-gen"
# AA.A.996.release-fix, 2026-05-18 — release.yml::Sync shim version step
# rewrites this line + the recon-gen pin from ${GITHUB_REF_NAME#v} before
# build, so CI is authoritative for the published wheel. The in-tree
# value here is a placeholder used by local `python -m build` invocations
# and as a sanity check; bump alongside `src/recon_gen/__init__.py` when
# you want a local shim wheel to match.
version = "11.0.2"
description = "Deprecated rename shim — install `recon-gen` instead (this package will be removed in ~1-2 months)."
readme = "README.md"
license = "MIT"
requires-python = ">=3.13"
keywords = ["deprecated", "shim", "recon-gen"]
classifiers = [
    "Development Status :: 7 - Inactive",
    "Intended Audience :: Developers",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.13",
]
dependencies = [
    # Pin to the same version as this shim — the shim publishes once
    # per recon-gen release during the grace window so the version
    # pair stays in lockstep. release.yml rewrites this line from the
    # git tag on publish (AA.A.996.release-fix); the in-tree value is
    # a placeholder for local builds.
    "recon-gen==11.0.2",
]

[project.urls]
Homepage = "https://github.com/chotchki/recon-gen"
Source = "https://github.com/chotchki/recon-gen"
Issues = "https://github.com/chotchki/recon-gen/issues"

[tool.setuptools.packages.find]
where = ["src"]
